# infra

./: .editorconfig  .gitattributes  .gitignore  .php-cs-fixer.dist.php  Makefile  README.md  composer.json  package.json  phpstan.baseline.neon  phpstan.neon.dist  phpunit.xml.dist  psalm.baseline.xml  psalm.xml.dist  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: resources.instructions.md  tests.instructions.md
.github/workflows/: build.yaml  release.yaml
resources/Certificates/: common.mk
resources/Common/: Makefile  default.mk
resources/Compose/: common.mk
resources/Gitlab/: compose.yaml  docker-compose.yaml  ssh.yaml
resources/Lighthouse/: common.mk
resources/Linux/: Makefile
resources/Monorepo/: common.mk
resources/Node/: application.mk  common.mk
resources/PHP/: Makefile  common.mk  default.mk  library.mk  library_monorepo.mk  phar.mk  php-cs-fixer.php
resources/PHP/common/: .gitattributes  infection.json.dist  phpunit.xml.dist  psalm.xml.dist
resources/PHP/library_monorepo/: Makefile
resources/PHP/phar/: box.json.dist
resources/Pimcore/: Makefile  application.mk  common.mk  library.mk
resources/Secrets/: common.mk
resources/Symfony/: application.mk  common.mk
resources/Visual/: check-loaded-images.js  common.mk  create-backstop-config.js  default.mk  helpers.js  http-server.js  on-ready.js
resources/YASSG/: common.mk  compat.mk  default.mk
tests/functional/: ComposerExampleTest.php  MakefileExampleTest.php  MakefileTest.php  MakefileTestCase.php  PackageExampleTest.php  PhpQaTrait.php
(+34 files in other folders)
