[tool.poetry]
name = "sigwin-infra"
authors = ["Dalibor Karlović"]
description = "Sigwin's default per-project infra"
version = "0.1.1"
packages = [{ include = "sigwin_infra" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
docutils = "0.20.1"
build = "^1.2.2.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
